@@ -38,6 +38,8 @@
 #include <syscall.h>
 #endif
 
+#include <atomic>
+
 #include "CrashHandler.h"
 #include "Basics/PhysicalMemory.h"
 #include "Basics/StringUtils.h"
@@ -52,6 +54,10 @@
 
 #ifndef _WIN32
 namespace {
+/// @brief an atomic that makes sure there are no races inside the signal
+/// handler callback
+std::atomic<bool> crashHandlerInvoked(false);
+
 /// @brief appends null-terminated string src to dst,
 /// advances dst pointer by length of src
 void appendNullTerminatedString(char const* src, char*& dst) {
@@ -125,78 +131,101 @@ size_t buildLogMessage(char* s, int signal, siginfo_t const* info, int stackSize
   return p - s;
 }
 
+/// @brief the actual function that is invoked for a deadly signal
+/// (i.e. SIGSEGV, SIGBUS, SIGILL, SIGFPE...)
+///
+/// the following assumptions are made for this crash handler:
+/// - it is invoked in fatal situations only, that we need as much information as possible
+///   about. thus we try logging some information into the ArangoDB logfile. Our logger is
+///   not async-safe right now. Additionally, logging messages needs to allocate memory.
+///   the same is true for generating the backtrace.
+///   in case of a corrupted heap/stack all this will fall apart. However, it is better to
+///   try using our logger than doign nothing or writing somewhere else nobody will see
+///   the information later.
+/// - the interesting signals are delivered from the same thread that caused them. Thus we 
+///   will have a few stack frames of the offending thread available.
+/// - it is not possible to generate the stack traces from other threads without substantial
+///   efforts, so we are not even trying this.
+/// - the backtrace produced by the crash handler will contain addresses into the binary.
+///   these need to be resolved later (manually) using `addr2line`.
+/// - Windows is currently not supported.
 void crashHandler(int signal, siginfo_t* info, void*) {
-  // restore default signal action, so that we can write a core dump and crash "properly"
-  struct sigaction act;
-  sigemptyset(&act.sa_mask);
-  act.sa_flags = SA_NODEFER | SA_ONSTACK | SA_RESETHAND;
-  act.sa_handler = SIG_DFL;
-  sigaction(signal, &act, nullptr);
-  
+  if (!::crashHandlerInvoked.exchange(true)) {
+    // restore default signal action, so that we can write a core dump and crash "properly"
+    struct sigaction act;
+    sigemptyset(&act.sa_mask);
+    act.sa_flags = SA_NODEFER | SA_ONSTACK | SA_RESETHAND;
+    act.sa_handler = SIG_DFL;
+    sigaction(signal, &act, nullptr);
+    
 #ifdef ARANGODB_ENABLE_MAINTAINER_MODE
-  // prints a backtrace in maintainer mode, if and only if ARANGODB_ENABLE_BACKTRACE
-  // is defined. Will call malloc and other async-unsafe ops. But will not do anything
-  // in production.
-  TRI_PrintBacktrace();
+    // prints a backtrace in maintainer mode, if and only if ARANGODB_ENABLE_BACKTRACE
+    // is defined. Will call malloc and other async-unsafe ops. But will not do anything
+    // in production.
+    TRI_PrintBacktrace();
 #endif
 
-  try {
-    // buffer for constructing temporary log messages (to avoid malloc as much as possible)
-    char buffer[512];
-    memset(&buffer[0], 0, sizeof(buffer));
-
-    // acquire backtrace
-    static constexpr int maxFrames = 100;
-    void* traces[maxFrames];
-    int skipFrames = 2;
-    int numFrames = backtrace(traces, maxFrames);
- 
-    char* p = &buffer[0];
-    size_t length = buildLogMessage(p, signal, info, numFrames - skipFrames);
-    // note: LOG_TOPIC() will allocate memory
-    LOG_TOPIC("a7902", ERR, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], length);
-    arangodb::Logger::flush();
-
-    // note: backtrace_symbols() will allocate memory
-    char** stack = backtrace_symbols(traces, numFrames); 
-    if (stack != nullptr) {
-      for (int i = skipFrames /* ignore first frames */; i < numFrames; ++i) {
-        char* p = &buffer[0];
-        appendNullTerminatedString("- frame #", p);
-        p += arangodb::basics::StringUtils::itoa(uint64_t(i), p);
-        appendNullTerminatedString(": ", p);
-        if (strlen(stack[i]) <= sizeof(buffer) / 2) {
-          // only append stack trace to buffer if it is safe (i.e. short enough to append it)
-          appendNullTerminatedString(stack[i], p);
-
-          LOG_TOPIC("308c2", INFO, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], p - &buffer[0]);
-        }
-      }
-      free(stack);
-      arangodb::Logger::flush();
-    }
-   
-    {
-      auto processInfo = TRI_ProcessInfoSelf();
+    try {
+      // buffer for constructing temporary log messages (to avoid malloc as much as possible)
+      char buffer[1024];
       memset(&buffer[0], 0, sizeof(buffer));
-      p = &buffer[0];
-      appendNullTerminatedString("available physical memory: ", p);
-      p += arangodb::basics::StringUtils::itoa(arangodb::PhysicalMemory::getValue(), p);
-      appendNullTerminatedString(", rss usage: ", p);
-      p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._residentSize), p);
-      appendNullTerminatedString(", vsz usage: ", p);
-      p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._virtualSize), p);
-      appendNullTerminatedString(", threads: ", p);
-      p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._numberThreads), p);
-      
-      LOG_TOPIC("ded81", INFO, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], p - &buffer[0]);
-      arangodb::Logger::flush();
-    }
 
-    arangodb::Logger::shutdown();
-  } catch (...) {
-    // we better not throw an exception from inside a signal handler
+      // acquire backtrace
+      static constexpr int maxFrames = 100;
+      void* traces[maxFrames];
+      int skipFrames = 2;
+      int numFrames = backtrace(traces, maxFrames);
+   
+      char* p = &buffer[0];
+      size_t length = buildLogMessage(p, signal, info, numFrames - skipFrames);
+      // note: LOG_TOPIC() will allocate memory
+      LOG_TOPIC("a7902", ERR, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], length);
+      arangodb::Logger::flush();
+
+      // note: backtrace_symbols() will allocate memory
+      char** stack = backtrace_symbols(traces, numFrames); 
+      if (stack != nullptr) {
+        for (int i = skipFrames /* ignore first frames */; i < numFrames; ++i) {
+          char* p = &buffer[0];
+          appendNullTerminatedString("- frame #", p);
+          p += arangodb::basics::StringUtils::itoa(uint64_t(i), p);
+          appendNullTerminatedString(": ", p);
+          if (strlen(stack[i]) <= sizeof(buffer) / 2) {
+            // only append stack trace to buffer if it is safe (i.e. short enough to append it)
+            appendNullTerminatedString(stack[i], p);
+
+            // note: LOG_TOPIC() will allocate memory
+            LOG_TOPIC("308c2", INFO, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], p - &buffer[0]);
+          }
+        }
+        free(stack);
+        arangodb::Logger::flush();
+      }
+     
+      {
+        auto processInfo = TRI_ProcessInfoSelf();
+        memset(&buffer[0], 0, sizeof(buffer));
+        p = &buffer[0];
+        appendNullTerminatedString("available physical memory: ", p);
+        p += arangodb::basics::StringUtils::itoa(arangodb::PhysicalMemory::getValue(), p);
+        appendNullTerminatedString(", rss usage: ", p);
+        p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._residentSize), p);
+        appendNullTerminatedString(", vsz usage: ", p);
+        p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._virtualSize), p);
+        appendNullTerminatedString(", threads: ", p);
+        p += arangodb::basics::StringUtils::itoa(uint64_t(processInfo._numberThreads), p);
+        
+        // note: LOG_TOPIC() will allocate memory
+        LOG_TOPIC("ded81", INFO, arangodb::Logger::CRASH) << arangodb::Logger::CHARS(&buffer[0], p - &buffer[0]);
+        arangodb::Logger::flush();
+      }
+
+      arangodb::Logger::shutdown();
+    } catch (...) {
+      // we better not throw an exception from inside a signal handler
+    }
   }
+
 
 #ifdef _WIN32
   exit(255 + signal);
@@ -212,7 +241,7 @@ namespace arangodb {
 
 void CrashHandler::installCrashHandler() {
 #ifndef _WIN32
-  // install signal handlers
+  // install signal handlers for the following signals
   struct sigaction act;
   sigemptyset(&act.sa_mask);
   act.sa_flags = SA_NODEFER | SA_RESETHAND | SA_SIGINFO;
